--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "live-server --port=3000 --host=localhost"
   },
-  "author": “everydayspymaster",
+  "author": “employee-locator",
   "license": "MIT",
   "devDependencies": {
     "live-server": "^1.2.1"
